# utf8

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  conanfile.txt
examples/: basic.cpp  char.cpp  parse.cpp  string_view.cpp
include/: basic_string.h  basic_string_view.h  char_t.h  inner.h  is_ascii.h  is_utf8.h  state.h  to_ascii.h  utf8.hpp
include/noexport/: decode.h  encode.h  utils.h  validation.h
include/unicode/: conversions.h  unicode.h
tests/: access.cpp  basic.cpp  convert.cpp  iter.cpp  operations.cpp
